infra/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: syncthing
      labels:
        app.kubernetes.io/name: syncthing
    spec:
      containers:
        - name: syncthing
          image: syncthing/syncthing:1.27
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              cpu: "50m"
              memory: "100Mi"
          ports:
            - containerPort: 8384
              name: web-ui
              protocol: TCP
            - containerPort: 22000
              protocol: TCP
              name: file-transfer
            - containerPort: 22000
              protocol: UDP
              name: quic-transfer
            - containerPort: 21027
              protocol: UDP
              name: local-discovery
          volumeMounts:
            - name: syncthing-persistent-storage
              mountPath: /var/syncthing
            - name: syncthing-cert-key
              readOnly: true
              mountPath: /var/syncthing/config/cert.pem
              subPath: tls.crt
            - name: syncthing-cert-key
              readOnly: true
              mountPath: /var/syncthing/config/key.pem
              subPath: tls.key
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: syncthing-persistent-storage
          persistentVolumeClaim:
            claimName: syncthing-pv-claim
        - name: syncthing-cert-key
          secret:
            secretName: syncthing-remote
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
---
apiVersion: v1
kind: Service
metadata:
  namespace: syncthing
  name: syncthing-service
  labels:
    app: syncthing
spec:
  selector:
    app.kubernetes.io/name: syncthing
  ports:
    - name: web-ui
      port: 8384
      targetPort: 8384
      protocol: TCP
    - name: file-transfer
      port: 22000
      targetPort: 22000
      protocol: TCP
    - name: quic-transfer
      port: 22000
      targetPort: 22000
      protocol: UDP
    - name: local-discovery
      port: 21027
      targetPort: 21027
      protocol: UDP
