infra/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: syncthing
  name: syncthing-service
  labels:
    app: syncthing
spec:
  selector:
    app.kubernetes.io/name: syncthing
  ports:
    - name: web-ui
      port: 8384
      targetPort: 8384
      protocol: TCP
    - name: file-transfer
      port: 22000
      targetPort: 22000
      protocol: TCP
    - name: quic-transfer
      port: 22000
      targetPort: 22000
      protocol: UDP
    - name: local-discovery
      port: 21027
      targetPort: 21027
      protocol: UDP
